--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 *.xcuserstate
 
 *.xcuserstate
+
+SpaceAttack.xcodeproj/project.xcworkspace/xcuserdata/charlesjohnston.xcuserdatad/UserInterfaceState.xcuserstate
