upgrade screen framerate
removed skscene from upgrade screen

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@
 *.xcuserstate
 
 SpaceAttack.xcodeproj/project.xcworkspace/xcuserdata/charlesjohnston.xcuserdatad/UserInterfaceState.xcuserstate
+
+SpaceAttack.xcodeproj/xcuserdata/517758.xcuserdatad/xcschemes/SpaceAttack.xcscheme
+
+SpaceAttack.xcodeproj/xcuserdata/517758.xcuserdatad/xcschemes/xcschememanagement.plist
