--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ SpaceAttack.xcodeproj/project.xcworkspace/xcuserdata/charlesjohnston.xcuserdatad
 SpaceAttack.xcodeproj/xcuserdata/517758.xcuserdatad/xcschemes/SpaceAttack.xcscheme
 
 SpaceAttack.xcodeproj/xcuserdata/517758.xcuserdatad/xcschemes/xcschememanagement.plist
+
+*.xcbkptlist
