--- a/SpriteWalkthough/SpriteWalkthough-Info.plist
+++ b/SpriteWalkthough/SpriteWalkthough-Info.plist
@@ -53,6 +53,8 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>UILaunchStoryboardName</key>
+	<string>LaunchScreen_english</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
